# ml-translator-api-demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  local-dev.py  local-server.py  pyproject.toml  requirements.txt
dev-tools/: start-server.py
src/: .dockerignore  Dockerfile  config.py  config.yml  conftest.py  data_models.py  main.py  polyglot.py  requirements.txt  schemas.py  settings.py
src/api/: dependencies.py
src/api/languages/: handlers.py  handlers_test.py  models.py
src/app/: config.py  config.yml  main.py  polyglot.py  schemas.py  translator.py
src/app/routes/: v1.py
src/core/: constants.py  exceptions.py  health.py  lifespan.py  middleware.py  openapi.py
src/dependencies/: context.py
src/dev-tools/: start-server.py
src/inference/: dependencies.py  detection.py  detection_test.py  models.py  translation.py  translation_test.py
src/inference/pretrained_models/opus-mt-ru-en/: generation_config.json  tokenizer_config.json
src/pretrained-models/opus-mt-ru-en/: config.json
src/routes/: v1.py
src/tests/: conftest.py  test_api_v1.py  test_polyglot.py  test_translator.py
tests/: conftest.py  test_polyglot.py
